invalid_var_type_arg_keywords_test/invalid_var_type_arg_keywords_test_5.src
.IPPcode24
READ LF@c bool LF@a